unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/SPARTADMS__Document_Approvers__c.object-meta.xml
<CustomObject>
    <description>Corporate Document Approver</description>
    <label>Document Approver</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Approver Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>