unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Approval_Completed_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approval_Completed_Date__c</fullName>
        <description>Approved Date</description>
        <inlineHelpText>Approved Date</inlineHelpText>
        <label>Approval Completed Date</label>
        <type>DateTime</type>
    </CustomField>