unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Approval_Submitted_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Approval_Submitted_Date__c</fullName>
        <description>Approval Submission Date</description>
        <inlineHelpText>Approval Submission Date</inlineHelpText>
        <label>Approval Submitted Date</label>
        <type>DateTime</type>
    </CustomField>