unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Deactivate__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Deactivate/Reactivate approver</description>
        <inlineHelpText>Used to Deactivate/Reactivate approver</inlineHelpText>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </CustomField>