unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Group_MembershipId__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Group_MembershipId__c</fullName>
        <description>Group MembershipId</description>
        <inlineHelpText>Group MembershipId</inlineHelpText>
        <label>Group MembershipId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>