unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Is_Final_Approver__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Is_Final_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Final Approver</description>
        <inlineHelpText>Is Final Approver</inlineHelpText>
        <label>Is Final Approver</label>
        <type>Checkbox</type>
    </CustomField>