unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Notes_to_Approver__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Notes_to_Approver__c</fullName>
        <description>Notes to Approver</description>
        <inlineHelpText>Notes to Approver</inlineHelpText>
        <label>Notes to Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>