unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Related_Box_User__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Box_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Document Approver</description>
        <inlineHelpText>Document Approver</inlineHelpText>
        <label>Document Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPARTADMS__Box_Users__c.SPARTADMS__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPARTADMS__Box_Users__c</referenceTo>
        <relationshipLabel>Document Approvers</relationshipLabel>
        <relationshipName>Document_Approvers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>