unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/fields/SPARTADMS__Related_Corporate_Document__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Corporate_Document__c</fullName>
        <description>Related Corporate Document</description>
        <inlineHelpText>Related Corporate Document</inlineHelpText>
        <label>Related Corporate Document</label>
        <referenceTo>SPARTADMS__Corporate_Document__c</referenceTo>
        <relationshipLabel>Document Approvers</relationshipLabel>
        <relationshipName>Document_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>