unpackaged/main/default/objects/SPARTADMS__Document_Approvers__c/validationRules/SPARTADMS__ManageDocumentApprover.validationRule-meta.xml
<ValidationRule>
        <fullName>SPARTADMS__ManageDocumentApprover</fullName>
        <active>false</active>
        <description>Manage document approver</description>
        <errorConditionFormula>OR( 

AND( 


ISPICKVAL(SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c, 'Approved') || 
ISPICKVAL(SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c, 'Effective') || 
ISPICKVAL(SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c, 'Obsolete'), 

OR( 
ISNEW(), 
ISCHANGED( SPARTADMS__Deactivate__c ), 
ISCHANGED( SPARTADMS__Related_Box_User__c ) , 
ISCHANGED( SPARTADMS__Related_Corporate_Document__c ) , 
ISCHANGED( SPARTADMS__Notes_to_Approver__c ), 
ISCHANGED( SPARTADMS__Is_Final_Approver__c ) 
) 

), 


IF(ISPICKVAL(SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c, 'Pending Approval'), 
OR( 
ISCHANGED( SPARTADMS__Related_Box_User__c ) , 
ISCHANGED( SPARTADMS__Related_Corporate_Document__c )
),false 
) 


)</errorConditionFormula>
        <errorMessage>Document approver record is locked.</errorMessage>
    </ValidationRule>